v015.tf

resource "aws_instance" "v015" {
	private_ip = "10.0.15.0"
	tags {
        	Name = "ktaka_v015"
		Owner = "ktaka"
    	}

        ami = "ami-2a34e94a"
        instance_type = "t2.micro"
        subnet_id = "${aws_subnet.priv.id}"
	security_groups = ["${aws_security_group.local.id}"]
        source_dest_check = true
        key_name = "ktaka.root"
	iam_instance_profile = "ktaka_role"

	root_block_device {
		volume_type = "gp2"
		volume_size = 10
		delete_on_termination = "true"
	}
}
